tests/NormalTests/paczka1/fuzzy1/12160615.err
Error in line 1: A484 A22 33,7
Error in line 26: A484 A484 33,0
